--- a/Client/src/login.scss
+++ b/Client/src/login.scss
@@ -1,10 +1,10 @@
 :root {
-  --color-white: #ffffff;
-  --color-gray-100: #d0d0d0;
-  --color-gray-200: #c0c0c0;
-  --color-gray-300: #b8b8b8;
-  --color-gray-400: #a9a9a9;
-  --color-gray-500: #707070;
+  --color-white: #dbf5d8;
+  --color-gray-100: #abdac2;
+  --color-gray-200: #a5c2a6;
+  --color-gray-300: #a7b49e;
+  --color-gray-400: #8ea58c;
+  --color-gray-500: #838d68;
   --border-radius: 8px;
 }
 
@@ -17,14 +17,14 @@
 }
 
 body {
-  --color-primary: #333;
-  --color-primary-dark: #222;
+  --color-primary: rgb(19, 54, 27);
+  --color-primary-dark: rgb(13, 37, 13);
   --color-secondary: #a9a9a9;
   --color-error: #cf7676;
   --color-success: #4bb544;
 
   font-family: Arial, Helvetica, sans-serif;
-  background-color: var(--color-white);
+  background-color: var(--color--gray-100);
 }
 
 .container {
@@ -37,7 +37,7 @@ body {
   padding: 2rem;
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
   border-radius: var(--border-radius);
-  background: #ffffff;
+  background: #e8f7e4;
 
   /* background-color:#222;
     width: 75px;
@@ -197,7 +197,7 @@ a:hover {
 /* Header Login */
 
 .sign__in {
-  background-color: #222;
+  background-color: rgb(13, 44, 20);
   width: 75px;
   height: 30px;
   color: azure;
