routing up server with login and signup

--- a/Client/Pages/Lobby.scss
+++ b/Client/Pages/Lobby.scss
@@ -108,7 +108,7 @@ button svg {
 }
 
 .select {
-  border: 1px solid darkblue;
+  border: 1px solid white;
   padding: 5px 10px 15px 20px;
   font-size: 12px;
   font-weight: 300;
